# python-rust-image-generation

./: .gitignore  build_and_run.sh  dokumentacja.md  main.py  requirements.txt
pyfract/: __init__.py  image_generation.py
rsfract/: Cargo.toml  pyproject.toml
rsfract/src/: lib.rs
